@@ -2,6 +2,7 @@ Tue Jun 3 2014
 1. Bug fixing
    * Check the input data are sorted according to the model hierarchy and provide error if not
    * Only send the data used in the model to MLwiN
+   * Interpret xclass by option names instead of positions
 
 2. Changes
    * Add sort.force option to make R2MLwiN sort the data as expected
